--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+
 /*
 Theme Name: Twenty Twenty-One Child
 Theme URI: https://stefanobonzi.it/wp-content/themes/twentytwentyone-child/
@@ -28,16 +29,14 @@ form p {
   margin-bottom: 1em;
 }
 
-.faq {
-  dd {
-    margin-bottom: 2em;
-  }
+.faq dd {
+  margin-bottom: 2em;
+}
 
-  dt {
-    font-size: 1.25em;
-    font-weight: normal;
-    background-color: #fcf;
-  }
+.faq dt {
+  font-size: 1.25em;
+  font-weight: normal;
+  background-color: #fcf;
 }
 
 cite a,
