--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*
-Theme Name: Twenty Twenty-One Child
+Theme Name: sbonzix
 Theme URI: https://stefanobonzi.it/wp-content/themes/twentytwentyone-child/
 Author: Stefano Bonzi
 Author URI: https://stefanobonzi.it/
@@ -9,7 +9,7 @@ Template:  twentytwentyone
 Version: 1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: twentytwentyonechild
+Text Domain: sbonzix
 Tags: 
 */
 @font-face {
