--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ Template:  twentytwentyone
 Version: 1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: sbonzix
+Text Domain: twentytwentyonechild
 Tags: 
 */
 @font-face {
