--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ Tags:
 @font-face {
   font-family: 'sbonzixregular';
   src: url('http://stefanobonzi.it/wp-content/themes/twentytwentyone-child/sbonzix-webfont.woff2') format('woff2');
-  font-weight: normal;
-  font-style: normal;
+  font-weight: normal!important;
+  font-style: normal!important;
 }
 
 :root {
@@ -34,7 +34,7 @@ form p {
 
 .faq dt {
   font-size: 1.25em;
-  font-weight: normal;
+  font-weight: normal!important;
   background-color: #fcf;
 }
 
@@ -45,19 +45,19 @@ a:visited {
 }
 
 strong {
-  font-style: normal;
-  font-weight: normal;
+  font-style: normal!important;
+  font-weight: normal!important;
   background-color: #fcf;
 }
 
 em {
-  font-style: normal;
-  font-weight: normal;
+  font-style: normal!important;
+  font-weight: normal!important;
   background-color: #cff;
 }
 
 blockquote p {
-  font-weight: normal;
+  font-weight: normal!important;
 }
 
 ins {
@@ -66,7 +66,7 @@ ins {
 }
 
 .nav-links .post-title {
-  font-weight: normal;
+  font-weight: normal!important;
   color: #00c;
   text-decoration: underline;
 }
