--- a/style.css
+++ b/style.css
@@ -21,14 +21,56 @@
   padding: 0;
 }
 
+:root {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: normal;
+  font-family: "sbonzixregular";
+  line-height: 1.4;
+}
+
 body {
   background: url("img/main-bck-body.png") repeat;
-  font: 20px/28px "sbonzixregular";
-  padding: 7px;
+  padding-top: 5px;
+  padding-right: 0;
+  padding-bottom: 0;
+  padding-left: 0;
   width: 30em;
   margin: 0 auto;
 }
 
 p {
+  line-height: 28px;
+  margin-top: 0;
   margin-bottom: 28px;
+  margin-right: 0;
+  margin-left: 0;
+  font-size: 1em;
+  font-family: "sbonzixregular";
+  font-weight: normal;
+  font-style: normal;
+}
+
+h2 {
+  line-height: 56px;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-right: 0;
+  margin-left: 0;
+  font-size: 1.55em;
+  font-family: "sbonzixregular";
+  font-weight: normal;
+  font-style: normal;
+}
+
+h1 {
+  line-height: 84px;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-right: 0;
+  margin-left: 0;
+  font-size: 1.95em;
+  font-family: "sbonzixregular";
+  font-weight: normal;
+  font-style: normal;
 }
