rebased to blockbase

--- a/src/sass/_manifest.scss
+++ b/src/sass/_manifest.scss
@@ -1,12 +1,10 @@
 ﻿/*
-	Theme Name: sbonzix2023
-	Theme URI: https://stefanobonzi.it/wp-content/themes/sbonzix2023/
-	Author: Stefano Bonzi
-	Author URI: https://stefanobonzi.it/
-	Description: sbonzix 2023 WP theme
-	Version: 1.0.0
-	License: GNU General Public License v2 or later
-	License URI: http://www.gnu.org/licenses/gpl-2.0.html
-	Text Domain: sbonzix2023
-	Tags: 
+Theme Name: sbonzix
+Template: blockbase
+Theme URI: https://stefanobonzi.it/wp-content/themes/sbonzix
+Author: Stefano Bonzi	
+Author URI: https://stefanobonzi.it
+Description: Theme for stefanobonzi.it, a child theme of Blockbase theme by Automatic
+Version: 1.0.0
+Text Domain: sbonzix
 */
